# nsl

./: Cargo.toml  LICENSE  README.md  README.zh-CN.md  deny.toml  install.sh  justfile  llms.txt
.github/workflows/: ci.yml  docker.yml  npm.yml  release.yml
crates/nsl/: Cargo.toml
crates/nsl/src/: main.rs
crates/nsl/src/cli/: handler.rs  mod.rs
crates/nsl/src/config/: mod.rs
crates/nsl/src/pages/: mod.rs
crates/nsl/src/platform/: unix.rs
crates/nsl/src/proxy/: handler.rs  handler_tests.rs  mod.rs  server.rs  websocket_tests.rs
crates/nsl/src/run/: framework.rs  mod.rs  tests.rs
crates/nsl/src/serve/: mod.rs
crates/nsld/: Cargo.toml  SECURITY.md
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/nsl/: README.md  package.json
npm/win32-x64/: package.json
tests/src/: helpers.ts
