[workspace]
resolver = "2"
members = [
    "crates/nsl",
]

[workspace.package]
version = "0.1.10"
edition = "2024"
authors = ["NetSeed Ltd"]
license = "Apache-2.0"
repository = "https://github.com/dotns/nsl"
homepage = "https://github.com/dotns/nsl"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
clap = { version = "4", features = ["derive"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12", "logging"] }
rustls-pemfile = "2"
tempfile = "3"
rcgen = { version = "0.14.7", features = ["pem", "x509-parser"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
